--- a/db/jooq/build.gradle
+++ b/db/jooq/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.0'
     id 'io.spring.dependency-management' version '1.1.5'
+    // gradle-jooq-plugin for jOOQ code generator
+    id 'nu.studer.jooq' version '9.0'
 }
 
 group = 'org.demo'
@@ -24,8 +26,13 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+jooq {
+    edition = nu.studer.gradle.jooq.JooqEdition.OSS  // jOOQ Open-Source is the default (can be omitted)
 }
