--- a/db/jooq/src/main/resources/application.properties
+++ b/db/jooq/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=jooq
+
+# configure data source
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:~/test;AUTO_SERVER=TRUE
+spring.datasource.username=sa
+spring.datasource.password=
+
+# logging
+#logging.level.root=debug
+
+# SQL dialect if you want to be sure
+spring.jooq.sql-dialect=h2
